Text correction subtitle Changed: scroll-down animation is now only visible on from pc_sm screens onwards

--- a/app/styles/modules/components/_scroll-down.scss
+++ b/app/styles/modules/components/_scroll-down.scss
@@ -1,4 +1,5 @@
 .scroll-down {
+  display: none;
   width: 30px;
   height: 50px;
   border: 2px solid var(--txtClr-lightblue);
@@ -11,6 +12,10 @@
   overflow: hidden;
   opacity: 1;
   transition: opacity 0.6s ease-in-out;
+
+  @include pc_sm {
+    display: block;
+  }
 
   &.hide {
     opacity: 0;
